--- a/css/strapped.css
+++ b/css/strapped.css
@@ -55,13 +55,10 @@ body, h1, h2, h3, h4, h5, h6 {
   margin: 0.7em 0 0 1em;
 }
 .jumbotron {
-  background-image: url(../img/k2.png);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  color: #fff;
-  padding: 6.5em 0 0em;
+  padding: 6.5em 0 6em;
   text-align: center;
+  color: #fff;
+  background-color: transparent;
 }
 .jumbotron h1 {
   font-family: "gandhi serif", georgia, serif;
@@ -158,6 +155,9 @@ footer {
     font-size: 14px;
     padding: 6em 0 0em;
   }
+  .bgimg {
+    background-position: 0 60px;
+  }
   .benefit {
     margin-bottom: 2em;
   }
@@ -168,6 +168,9 @@ footer {
   }
   .jumbotron {
     font-size: 12px;
+  }
+  .bgimg {
+    background-position: 0 60px;
   }
   footer .pull-right {
     display: none;
@@ -191,7 +194,11 @@ footer {
 }
 
 .bgimg {
-    background-image: url(./img/k2.png);
+    background-image: url(./../img/k2.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0 30px;
 }
 
 .capability-title {
